Ajustando menus biblioteca, leitor e começando a devolucao